--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-expo": "^21.0.2",
+    "babel-preset-react-native-stage-0": "1.0.1",
+    "jest-expo": "21.0.2",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "scripts": {
-    "start": "react-native start",
+    "start": "watchman watch-del-all && react-native start --reset-cache",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch"
@@ -17,19 +17,19 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react-native": "^4.0.0",
-    "immutable": "^3.8.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react-native": "4.0.0",
+    "immutable": "3.8.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.4",
-    "react-navigation": "^1.0.0-beta.11",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0",
-    "slate": "^0.25.3",
-    "slate-edit-list": "^0.8.0",
-    "slate-react": "^0.2.1",
-    "slate-react-native": "https://github.com/andela-batolagbe/slate-react-native.git"
+    "react-native": "0.48.4",
+    "react-navigation": "1.0.0-beta.11",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2",
+    "redux-promise": "0.5.3",
+    "redux-thunk": "2.2.0",
+    "slate": "0.30.7",
+    "slate-edit-list": "0.8.0",
+    "slate-react": "0.10.13",
+    "slate-react-native": "file:../slate-react-native"
   }
 }
